--- a/businesspartnersreportlist/ui5-deploy.yaml
+++ b/businesspartnersreportlist/ui5-deploy.yaml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
 specVersion: '2.4'
 metadata:
-  name: ns.businesspartners
+  name: ns.businesspartnersreportlist
 type: application
 resources:
   configuration:
