--- a/businesspartnersreportlist/ui5-local.yaml
+++ b/businesspartnersreportlist/ui5-local.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: ns.businesspartners
+  name: ns.businesspartnersreportlist
 type: application
 framework:
   name: SAPUI5
@@ -46,5 +46,5 @@ server:
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
-        component: ns.businesspartners
+        component: ns.businesspartnersreportlist
         ui5Theme: sap_horizon
