--- a/businesspartnersreportlist/ui5-mock.yaml
+++ b/businesspartnersreportlist/ui5-mock.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: ns.businesspartners
+  name: ns.businesspartnersreportlist
 type: application
 server:
   customMiddleware:
