--- a/businesspartnersreportlist/ui5.yaml
+++ b/businesspartnersreportlist/ui5.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "3.1"
 metadata:
-  name: ns.businesspartners
+  name: ns.businesspartnersreportlist
 type: application
 server:
   customMiddleware:
@@ -29,5 +29,5 @@ server:
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
-        component: ns.businesspartners
+        component: ns.businesspartnersreportlist
         ui5Theme: sap_horizon
