changed manifest and i18n

--- a/businesspartnersreportlist/webapp/manifest.json
+++ b/businesspartnersreportlist/webapp/manifest.json
@@ -39,9 +39,10 @@
       "inbounds": {
         "Object-display": {
           "semanticObject": "Object",
-          "action": "display",
+          "action": "show",
           "title": "{{flpTitle}}",
           "subTitle": "{{flpSubtitle}}",
+          "icon": "sap-icon://chart-table-view",
           "signature": {
             "parameters": {},
             "additionalParameters": "allowed"
